surse/err36.txt
prob36.cpp: In function ‘int main()’:
prob36.cpp:18:24: error: no matching function for call to ‘cls::cls()’
     cls* p = new cls[10]; //(1)
                        ^